# os_custom_gaming

./: .gitignore  Cargo.toml  LICENCE  LICENSE  Readme.md  build_iso.bat  build_iso.sh  floppy.img  grub.cfg  linker.ld  memory-map.txt  rust-toolchain.toml  x86_64-fluxgrid_os.json  x86_64-os_gaming.json
.cargo/: config.toml
.github/workflows/: create-branch.yml  realase-versioning.yml
bootloader/: boot.asm  boot.elf  boot_header.s.backup
os_gaming/: Cargo.toml  build.rs  build_iso.sh  config.toml
os_gaming/.cargo/patches/: once_cell.patch
os_gaming/.cargo/patches/apic/: Cargo.toml
os_gaming/.cargo/patches/apic/src/: lib.rs
os_gaming/.cargo/patches/emath/: Cargo.toml
os_gaming/.cargo/patches/emath/src/: history.rs  lib.rs  pos2.rs  rect.rs  vec2.rs
os_gaming/.cargo/patches/log/: Cargo.toml
os_gaming/.cargo/patches/log/src/: lib.rs  serial.rs
os_gaming/.cargo/patches/once_cell/: Cargo.toml
os_gaming/.cargo/patches/once_cell/src/: lib.rs  race.rs  unsync.rs
os_gaming/.cargo/patches/pic8259/: Cargo.toml
os_gaming/.cargo/patches/pic8259/src/: lib.rs
os_gaming/.cargo/patches/serde/: Cargo.toml
os_gaming/.cargo/patches/serde/src/: de.rs  lib.rs  ser.rs
os_gaming/.cargo/patches/serde_derive/: Cargo.toml
os_gaming/.cargo/patches/serde_derive/src/: lib.rs
os_gaming/.cargo/patches/simd-adler32/: Cargo.toml
os_gaming/.cargo/patches/simd-adler32/src/: lib.rs
os_gaming/.cargo/patches/ttf-parser/: Cargo.toml
os_gaming/.cargo/patches/ttf-parser/src/: lib.rs
os_gaming/.cargo/patches/x86_64/: Cargo.toml
os_gaming/.cargo/patches/x86_64/src/: Page.rs  PhysAddr.rs  VirtAddr.rs  addr.rs  frame.rs  lib.rs  paging.rs  registers.rs  structures.rs
os_gaming/.cargo/patches/x86_64/src/instructions/: mod.rs  port.rs
os_gaming/.cargo/patches/zvariant/: Cargo.toml
os_gaming/.cargo/patches/zvariant/src/: lib.rs
os_gaming/src/: bootloaderCustom.rs  lib.rs  logger.rs  main.rs  system.rs
os_gaming/src/boot/: boot.s  info.rs  setup.rs
os_gaming/src/config/: mod.rs
os_gaming/src/gui/: app.rs  font.rs  input.rs  mod.rs  renderer.rs  theme.rs  window_manager.rs  windows_layout.rs
os_gaming/src/kernel/: boot.rs  mod.rs
os_gaming/src/kernel/cpu/: features.rs  identification.rs  mod.rs  performance.rs  power.rs
os_gaming/src/kernel/drivers/: display.rs  displayport.rs  filesystem.rs  gamepad.rs  hdmi.rs  inputs.rs  keyboard.rs  mod.rs  mouse.rs  network.rs  power.rs  sound.rs  storage.rs  timer.rs  usb.rs  vga.rs
os_gaming/src/kernel/drivers/gpu/: common.rs  detection.rs  mod.rs  pci.rs  vesa.rs
os_gaming/src/kernel/drivers/gpu/specific/: mod.rs
os_gaming/src/kernel/drivers/gpu/specific/amd/: common.rs  gcn.rs  mod.rs  rdna.rs
os_gaming/src/kernel/drivers/gpu/specific/intel/: common.rs  gen11.rs  gen12.rs  gen9.rs  mod.rs
os_gaming/src/kernel/drivers/gpu/specific/nvidia/: ampere.rs  common.rs  cuda.rs  mod.rs  turing.rs
os_gaming/src/kernel/interrupts/: apic.rs  handlers.rs  idt.rs  irq.rs  mod.rs
os_gaming/src/kernel/memory/: allocator.rs  dma.rs  memory_manager.rs  mod.rs  physical.rs  virtual.rs
