[package]
name = "os_gaming"
version = "0.1.0"
edition = "2021"
description = "A gaming operating system kernel"

[[bin]]
name = "os_gaming"
test = false
bench = false

[lib]
name = "os_gaming"
path = "src/lib.rs"

[dependencies]
spin = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
bit_field = "0.10.2"
pic8259 = "0.11.0"
serde = { version = "=1.0.152", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "derive"] }
raw-cpuid = "11.5.0"
panic-abort = "0.3.2"
libc = { version = "0.2.172", default-features = false }
linked_list_allocator = "0.10.5"
bootloader = { version = "0.9.23", default-features = false, features = ["map_physical_memory"] }
log = { version = "0.4.27", default-features = false }
uart_16550 = "0.3.2"
hashbrown = "0.14"
micromath = { version = "0.5.1", default-features = false }
x86_64 = { version = "^0.15.2", features = ["abi_x86_interrupt"] }


[features]
default = ["no_std"]
no_std = []

