[package]
name = "fluxgridOs"
version = "0.1.0"
edition = "2021"
description = "A gaming operating system kernel"

[[bin]]
name = "fluxgridOs"
path = "src/main.rs" # Ensure this points to your main.rs with _start
test = false
bench = false

[lib]
name = "fluxgridOs" # The library crate name
path = "src/lib.rs"

[dependencies]
spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
bit_field = "0.10.2"
pic8259 = "0.11.0"

serde = { version = "1.0.197", default-features = false, features = ["derive", "alloc"] }
once_cell = { version = "1.19.0", default-features = false, features = ["alloc"] }

bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "derive"] }
raw-cpuid = "11.5.0"
libc = { version = "0.2.155", default-features = false, optional = true }
linked_list_allocator = "0.10.5"

# REMOVED: bootloader crate is no longer a direct dependency for this boot method.
# bootloader = { version = "0.9.31", default-features = false, features = ["map_physical_memory"] }

log = { version = "0.4.21", default-features = false }
uart_16550 = { version = "0.3.0" }
hashbrown = { version = "0.14.5" }
micromath = { version = "2.1.0", default-features = false }
x86_64 = { version = "0.15.1", features = ["abi_x86_interrupt"] }
multiboot2 = "0.23.1"


[features]
default = ["no_std"]
no_std = []
# bootloader-custom-config = [] # Likely not needed
